fixed some spacing issues and reworked the toolbar

--- a/src/app/inital-login-page/inital-login-page.component.css
+++ b/src/app/inital-login-page/inital-login-page.component.css
@@ -12,7 +12,7 @@ img{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 150px;
+    margin-top: 225px;
     width: 40%;
 }
 
