--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -6,8 +6,14 @@ header{
     padding: 20px 100px;
     background: black;
     display: flex;
-    justify-content: center;
     z-index: 80;
+}
+
+.navigation{
+    display: flex;
+    justify-self: right;
+    margin-left: 900px;
+    margin-top: 17px;
 }
 
 .navigation a{
@@ -16,7 +22,7 @@ header{
     color: aliceblue;
     text-decoration: none;
     font-weight: 500;
-    margin-left: 30px;
+    margin-left: 10px;
     cursor: pointer;
 }
 
@@ -25,7 +31,7 @@ h1{
 }
 
 .header-logo img {
-    margin: 0 10px;
+    margin: 0 0;
     height: 50px;
-    left: 10px;
+    justify-content: left;
 }
